[tool.poetry]
name = "envzy"
version = "0.2.1"
description = "A library that explores dependencies from a given module or namespace in a local Python environment, then classifies these dependencies."
license = "Apache-2.0"
authors = ["Vladimir Lipkin <lipkin@yandex-team.ru>"]
readme = "README.md"
homepage = "https://github.com/lambdazy/envzy"
repository = "https://github.com/lambdazy/envzy"
include = ["AUTHORS", "CONTRIBUTING"]

[tool.poetry.dependencies]
python = "^3.8"
packaging = "^23.2"
typing-extensions = "^4.8.0"
importlib-metadata = "^6.8.0"
requests = "^2.31.0"
pypi-simple = "^1.2.0"
stdlib-list = {version = "^0.9.0", python = "<3.10"}
types-pyyaml = {version = "^6.0.12.12", optional = true}
types-setuptools = {version = "^68.2.0.0", optional = true}
types-requests = {version = "^2.31.0.10", optional = true}
types-stdlib-list = {version = "^0.8.3.4", optional = true}

[tool.poetry.extras]
tests = ["types-pyyaml", "types-setuptools", "types-requests", "types-stdlib-list"]

[tool.poetry.group.dev.dependencies]
tox = "^4.11.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.mypy.overrides]]
module = [
    "cloudpickle",
    "modules_for_tests.*",
    "modules_for_tests_3.*",
    "empty_module",
    "sample",
    "lzy_test_project.*",
    "lzy_test_project_editable",
]
ignore_missing_imports = true
